--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Tyler Shaddix",
   "dependencies": {
     "gsap": "^1.19.0",
+    "jquery": "^3.1.1",
     "react": "^0.14.3",
     "react-chrome-redux": "0.0.7",
     "react-dom": "^0.14.3",
